added seo keywords

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 			content="Gabcodes is a website made Al Francis Gabriel Bolima, A virtual crafter of websites,games,applications and more!."
 		/>
 		<meta name="author" content="Al Francis Gabriel Bolima" />
+		<meta
+			name="”keywords”"
+			content="Al Francis Gabriel Bolima,alfrancisgabriel,Bolima,Web Developer,Portfolio,Programmer,Python,Python Programmer"
+		/>
 		<title>Al Francis Gabriel Bolima - Gabcodes</title>
 		<link rel="icon" type="image/x-icon" href="./assets/img/favicon.ico" />
 		<!-- Font Awesome icons (free version)-->
