--- a/index.html
+++ b/index.html
@@ -109,9 +109,8 @@
 							programming while he was studying at AMA Computer Learning Center
 							Antipolo
 						</p>
-						<img src="cinqueterre.jpg" class="rounded img-fluid" alt="Cert1" />
-						<img src="cinqueterre.jpg" class="rounded img-fluid" alt="Cert2" />
-						<img src="cinqueterre.jpg" class="rounded img-fluid" alt="Cert3" />
+						<img src="./assets/img/cert1.jpg" class="rounded img-fluid" alt="Cert1" />
+						<img src="./assets/img/cert2.jpg" class="rounded img-fluid" alt="Cert2" />
 					</div>
 				</div>
 			</div>
