edited the achievements

--- a/index.html
+++ b/index.html
@@ -105,12 +105,9 @@
 					<div class="col-lg-8 mx-auto">
 						<h2 class="text-white mb-4">Certificates</h2>
 						<p class="text-white-50">
-							Al Francis has achieved multiple awards that is related in
-							programming while he was studying at AMA Computer Learning Center
-							Antipolo
+							Al Francis is an achiever in programming back when he was studying programming.
 						</p>
 						<img src="./assets/img/cert1.jpg" class="rounded img-fluid" alt="Cert1" />
-						<img src="./assets/img/cert2.jpg" class="rounded img-fluid" alt="Cert2" />
 					</div>
 				</div>
 			</div>
