--- a/index.html
+++ b/index.html
@@ -220,34 +220,25 @@
 				</div>
 			</div>
 		</section>
-		<!-- Signup-->
+		Signup
 		<section class="signup-section" id="signup">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-10 col-lg-8 mx-auto text-center">
 						<i class="far fa-paper-plane fa-2x mb-2 text-white"></i>
-						<h2 class="text-white mb-5">Contact Gab!</h2>
-						<form>
-							<div class="form-inline d-flex">
-								<input
-									class="form-control flex-fill"
-									id="inputEmail"
-									type="email"
-									placeholder="Enter email address..."
-								/>
-							</div>
-							<div class="d-flex mt-2">
-								<textarea
-									id="inputBody"
-									style="padding-top: 10px; text-indent: 20px"
-									style="text-indent: 20px"
-									class="form-control lg-textarea w-100"
-									rows="4"
-									placeholder="Your message goes here..."
-								></textarea>
-							</div>
-							<button class="btn btn-primary mt-4" type="submit">Submit</button>
-						</form>
+						<h2 class="text-white mb-5">Skillset</h2>
+						<div class="form-inline d-flex">
+							<li>
+								<ol>Simple Websites</ol>
+								<ol>Microservices (REST-Api)</ol>
+								<ol>AWS Services Integration</ol>
+								<ol>Pyspark</ol>
+								<ol>Hadoop</ol>
+								<ol>Hbase</ol>
+								<ol>Hive</ol>
+								<ol>Python || Java || Scala</ol>
+							</li>
+						</div>
 					</div>
 				</div>
 			</div>
