--- a/index.html
+++ b/index.html
@@ -228,16 +228,16 @@
 						<i class="far fa-paper-plane fa-2x mb-2 text-white"></i>
 						<h2 class="text-white mb-5">Skillset</h2>
 						<div class="form-inline d-flex">
-							<li>
-								<ol>Simple Websites</ol>
-								<ol>Microservices (REST-Api)</ol>
-								<ol>AWS Services Integration</ol>
-								<ol>Pyspark</ol>
-								<ol>Hadoop</ol>
-								<ol>Hbase</ol>
-								<ol>Hive</ol>
-								<ol>Python || Java || Scala</ol>
-							</li>
+							<ul>
+								<li>Simple Websites</li>
+								<li>Microservices (REST-Api)</li>
+								<li>AWS Services Integration</li>
+								<li>Pyspark</li>
+								<li>Hadoop</li>
+								<li>Hbase</li>
+								<li>Hive</li>
+								<li>Python || Java || Scala</li>
+							</ul>
 						</div>
 					</div>
 				</div>
