--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 					<div class="col-md-10 col-lg-8 mx-auto text-center">
 						<i class="far fa-paper-plane fa-2x mb-2 text-white"></i>
 						<h2 class="text-white mb-5">Skillset</h2>
-						<div class="form-inline d-flex">
+						<div class="form-inline d-flex text-white mx-auto text-center">
 							<ul>
 								<li>Simple Websites</li>
 								<li>Microservices (REST-Api)</li>
