--- a/index.html
+++ b/index.html
@@ -226,19 +226,14 @@
 				<div class="row">
 					<div class="col-md-10 col-lg-8 mx-auto text-center">
 						<i class="far fa-paper-plane fa-2x mb-2 text-white"></i>
-						<h2 class="text-white mb-5">Skillset</h2>
-						<div class="form-inline d-flex text-white mx-auto text-center">
-							<ul>
-								<li>Simple Websites</li>
-								<li>Microservices (REST-Api)</li>
-								<li>AWS Services Integration</li>
-								<li>Pyspark</li>
-								<li>Hadoop</li>
-								<li>Hbase</li>
-								<li>Hive</li>
-								<li>Python || Java || Scala</li>
-							</ul>
-						</div>
+						<h2 class="text-white mb-5">Simple Websites</h2>
+						<h4 class="text-white mb-5">Microservices (REST-Api)</h4>
+						<h4 class="text-white mb-5">AWS Services Integration</h4>
+						<h4 class="text-white mb-5">Pyspark</h4>
+						<h4 class="text-white mb-5">Hadoop</h4>
+						<h4 class="text-white mb-5">Hbase</h4>
+						<h4 class="text-white mb-5">Hive</h4>
+						<h4 class="text-white mb-5">Python || Java || Scala</h4>
 					</div>
 				</div>
 			</div>
