--- a/index.html
+++ b/index.html
@@ -220,13 +220,13 @@
 				</div>
 			</div>
 		</section>
-		Signup
 		<section class="signup-section" id="signup">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-10 col-lg-8 mx-auto text-center">
 						<i class="far fa-paper-plane fa-2x mb-2 text-white"></i>
-						<h2 class="text-white mb-5">Simple Websites</h2>
+						<h2 class="text-white mb-5">Services</h2>
+						<h4 class="text-white mb-5">Simple Websites</h4>
 						<h4 class="text-white mb-5">Microservices (REST-Api)</h4>
 						<h4 class="text-white mb-5">AWS Services Integration</h4>
 						<h4 class="text-white mb-5">Pyspark</h4>
