--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-10 col-lg-8 mx-auto text-center">
-						<i class="far fa-attendant fa-2x mb-2 text-white"></i>
+						<i class="fas fa-book fa-2x mb-2 text-white"></i>
 						<h2 class="text-white mb-5">Services</h2>
 						<h4 class="text-white mb-5">Simple Websites</h4>
 						<h4 class="text-white mb-5">Microservices (REST-Api)</h4>
