updated project list

--- a/index.html
+++ b/index.html
@@ -128,11 +128,9 @@
 					</div>
 					<div class="col-xl-4 col-lg-5">
 						<div class="featured-text text-center text-lg-left">
-							<h4>SilkRoad</h4>
+							<h4>Recipeofyourmom</h4>
 							<p class="text-black-50 mb-0">
-								SilkRoad is a mini e-commerce website where you can pay and
-								place-order with ease. It contains stripe payments that can be
-								used in buying and selling.
+								This one is a pet project that gets food ideas for your mom to cook!
 							</p>
 						</div>
 					</div>
@@ -178,11 +176,9 @@
 								<div
 									class="project-text w-100 my-auto text-center text-lg-right"
 								>
-									<h4 class="text-white">UNTR4C34BL3</h4>
+									<h4 class="text-white">Covid Data Grabber</h4>
 									<p class="mb-0 text-white-50">
-										Just a pet project that hides file metadata from people. You
-										can hide details such as location, author, date created or
-										just delete the entire details!
+										Just a pet project that gets details available in the internet that can grab covid data and store it as csv files.
 									</p>
 									<hr class="d-none d-lg-block mb-0 mr-0" />
 								</div>
@@ -205,12 +201,10 @@
 								<div
 									class="project-text w-100 my-auto text-center text-lg-left"
 								>
-									<h4 class="text-white">Crawling Spyder</h4>
+									<h4 class="text-white">RPG OOP GAME</h4>
 									<p class="mb-0 text-white-50">
-										A tool used to crawl websites and gather files, emails and
-										more. It respects site privacy by looking into robots text
-										and searching keywords from privacy policy and terms of
-										conditions.
+										A good old terminal game made by practicing 3 OOP Principles:
+										Encapsulation, polymorphism, and inheritance.
 									</p>
 									<hr class="d-none d-lg-block mb-0 ml-0" />
 								</div>
