--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		/>
 		<meta
 			name="description"
-			content="Gabcodes is a website made Al Francis Gabriel Bolima, A virtual crafter of websites,games,applications and more!."
+			content="Gabcodes is a website made Al Francis Gabriel Bolima, A virtual crafter of websites,games,applications and more!"
 		/>
 		<meta name="author" content="Al Francis Gabriel Bolima" />
 		<title>Al Francis Gabriel Bolima - Gabcodes</title>
