--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 			href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
 			rel="stylesheet"
 		/>
+		<meta name="google-site-verification" content="wodAJ5khQI55gtb7ADqvr8BqOKlUm_-4HmhvJ-EIwv8" />
 		<!-- Core theme CSS (includes Bootstrap)-->
 		<link href="./dependencies/css/styles.css" rel="stylesheet" />
 	</head>
